--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+
+<color name="colorPrimary">#9C27B0</color>
+<color name="colorPrimaryDark">#7B1FA2</color>
+<color name="primaryLight">#E1BEE7</color>
+<color name="colorAccent">#FF5722</color>
+<color name="primaryText">#212121</color>
+<color name="secondaryText">#757575</color>
+<color name="icons">#FFFFFF</color>
+<color name="divider">#BDBDBD</color>
+
 </resources>
