--- a/app/src/main/res/layout/layout_card_large.xml
+++ b/app/src/main/res/layout/layout_card_large.xml
@@ -7,13 +7,21 @@
     card_view:cardCornerRadius="4dp"
     card_view:cardMaxElevation="2dp"
     card_view:cardElevation="1dp"
-    android:layout_margin="2dp"
+    android:layout_margin="4dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="6dp"
+
+        >
         <TextView
             android:id="@+id/card_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            />
+    </LinearLayout>
     </android.support.v7.widget.CardView>
