--- a/app/src/main/res/layout/layout_card_small.xml
+++ b/app/src/main/res/layout/layout_card_small.xml
@@ -3,18 +3,29 @@
 <android.support.v7.widget.CardView android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="65dp"
     card_view:cardCornerRadius="4dp"
     card_view:cardMaxElevation="2dp"
     card_view:cardElevation="1dp"
-    android:layout_margin="2dp"
-
+    android:layout_margin="4dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/tools">
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:background="@color/primaryLight"
 
-    <TextView
-        android:id="@+id/card_title"
+    >
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:padding="6dp"
+        android:background="@color/primaryLight"
 
+        >
+        <TextView
+            android:id="@+id/card_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
