--- a/app/src/main/res/layout/layout_card_large.xml
+++ b/app/src/main/res/layout/layout_card_large.xml
@@ -3,7 +3,7 @@
 <android.support.v7.widget.CardView android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="200dp"
     card_view:cardCornerRadius="4dp"
     card_view:cardMaxElevation="2dp"
     card_view:cardElevation="1dp"
@@ -15,13 +15,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="6dp"
-
-        >
+        android:orientation="vertical">
         <TextView
             android:id="@+id/card_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            />
+
+        <TextView
+            android:id="@+id/card_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+
+            />
+
+        <TextView
+            android:id="@+id/card_wifi_ssid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+
             />
     </LinearLayout>
     </android.support.v7.widget.CardView>
