improve display, refresh of chimes

--- a/app/src/main/res/layout/content_home_main.xml
+++ b/app/src/main/res/layout/content_home_main.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
+    android:id="@+id/swipe_layout"
     tools:showIn="@layout/activity_main">
 
     <android.support.v7.widget.RecyclerView
@@ -13,6 +16,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:visibility="gone"
+        />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/empty_view"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/no_nearby_chimes"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAlignment="center"
+        />
+
+</android.support.v4.widget.SwipeRefreshLayout>
