--- a/app/src/main/res/layout/layout_card_large.xml
+++ b/app/src/main/res/layout/layout_card_large.xml
@@ -3,7 +3,7 @@
 <android.support.v7.widget.CardView android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="150dp"
     card_view:cardCornerRadius="4dp"
     card_view:cardMaxElevation="2dp"
     card_view:cardElevation="1dp"
@@ -38,5 +38,20 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
 
             />
+        <TextView
+            android:id="@+id/card_service_uri"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="6dp"
+        android:orientation="horizontal">
+
     </LinearLayout>
     </android.support.v7.widget.CardView>
