more major updates checked-in

--- a/app/src/main/res/layout/content_home_main.xml
+++ b/app/src/main/res/layout/content_home_main.xml
@@ -18,6 +18,7 @@
         android:clipToPadding="false"
         android:scrollbars="vertical"
         android:visibility="gone"
+        android:layout_marginBottom="48dp"
         />
 
     <TextView
