--- a/app/src/main/res/layout/layout_card_large.xml
+++ b/app/src/main/res/layout/layout_card_large.xml
@@ -10,12 +10,16 @@
     android:layout_margin="4dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools">
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="6dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/infoview"
+        >
         <TextView
             android:id="@+id/card_title"
             android:layout_width="match_parent"
@@ -49,9 +53,42 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="6dp"
-        android:orientation="horizontal">
+        android:layout_below="@+id/infoview"
+        android:orientation="horizontal"
+        android:gravity="right"
+        >
 
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_share"
+            android:tint="@color/primaryLight"
+            android:layout_margin="6dp"
+            android:id="@+id/action_share"
+            />
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_location_search"
+            android:tint="@color/primaryLight"
+            android:layout_margin="6dp"
+            android:id="@+id/action_map"
+
+            />
+
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_wifi"
+            android:tint="@color/primaryLight"
+            android:layout_margin="6dp"
+            android:id="@+id/action_connect"
+
+            />
     </LinearLayout>
+</RelativeLayout>
     </android.support.v7.widget.CardView>
