--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,10 @@
 <color name="colorPrimary">#9C27B0</color>
 <color name="colorPrimaryDark">#7B1FA2</color>
 <color name="primaryLight">#E1BEE7</color>
-<color name="colorAccent">#FF5722</color>
+<color name="colorAccent">#9b1905</color>
 <color name="primaryText">#212121</color>
 <color name="secondaryText">#757575</color>
 <color name="icons">#FFFFFF</color>
 <color name="divider">#BDBDBD</color>
-
+<color name="colorActive">#00FF00</color>
 </resources>
