improve layout and usabilty

--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -10,7 +10,7 @@
     <item>
 
         <bitmap
-            android:src="@drawable/windchime"
+            android:src="@drawable/windchimesplash"
             android:gravity="center"/>
 
     </item>
